how to check numpy shape

--- a/Python_Help_code.ipynb
+++ b/Python_Help_code.ipynb
@@ -37,7 +37,9 @@
     "while Lrows <= 4:\n",
     "    arr1[Lrows,Lcolumn] = input(\"Enter a Number: \")\n",
     "    \n",
-    "    Lrows = Lrows+1\n"
+    "    Lrows = Lrows+1\n",
+    "    \n",
+    "print(\"shape: \", )\n"
    ]
   },
   {
