How to create Empyt List

--- a/Python_Help_code.ipynb
+++ b/Python_Help_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,8 @@
       "Enter a Number: 2\n",
       "Enter a Number: 3\n",
       "Enter a Number: 4\n",
-      "Enter a Number: 5\n"
+      "Enter a Number: 5\n",
+      "shape:  (5, 1)\n"
      ]
     }
    ],
@@ -39,7 +40,44 @@
     "    \n",
     "    Lrows = Lrows+1\n",
     "    \n",
-    "print(\"shape: \", )\n"
+    "print(\"shape: \", arr1.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "Enter a number: 1\n",
+      "Enter a number: 2\n",
+      "Enter a number: 3\n",
+      "['1', '2', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://www.programiz.com/python-programming/list\n",
+    "# How to create empty List\n",
+    "#Integers, floats, strings, and (as you'll learn later in this course) tuples are all immutable. \n",
+    "#Once one of these objects is created, it can't be modified, unless you reassign the object to a new value.\n",
+    "#The list is a data type that is mutable.\n",
+    "\n",
+    "a = []\n",
+    "print(type(a))\n",
+    "b= list()\n",
+    "print(type(b))\n",
+    "\n",
+    "i = 0\n",
+    "while i != 3:    \n",
+    "    a.append(input(\"Enter a number: \")) \n",
+    "    i += 1\n",
+    "print(a)   "
    ]
   },
   {
