--- a/Python_Help_code.ipynb
+++ b/Python_Help_code.ipynb
@@ -45,23 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "<class 'list'>\n",
-      "Enter a number: 1\n",
-      "Enter a number: 2\n",
-      "Enter a number: 3\n",
-      "['1', '2', '3']\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# https://www.programiz.com/python-programming/list\n",
+    "#https://developers.google.com/edu/python/lists#:~:text=insert(index%2C%20elem)%20%2D%2D,similar%20to%20using%20extend().\n",
+    "\n",
+    "# How to create empty List\n",
+    "#Integers, floats, strings, and (as you'll learn later in this course) tuples are all immutable. \n",
+    "#Once one of these objects is created, it can't be modified, unless you reassign the object to a new value.\n",
+    "#The list is a data type that is mutable.\n",
+    "\n",
+    "a = []\n",
+    "print(type(a))\n",
+    "b= list()\n",
+    "print(type(b))\n",
+    "\n",
+    "i = 0\n",
+    "while i != 3:    \n",
+    "    a.append(input(\"Enter a number: \")) \n",
+    "    i += 1\n",
+    "print(a)   "
+   ]
   },
   {
    "cell_type": "code",
