--- a/Python_Help_code.ipynb
+++ b/Python_Help_code.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numpy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -44,10 +51,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'list'>\n",
+      "Enter a number: 7\n",
+      "Enter a number: 5\n",
+      "Enter a number: 5\n",
+      "['7', '5', '5']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'thislist = [\"apple\", \"banana\", \"cherry\"]\\nprint(range(4))\\nfor i in range(1,len(thislist)):\\n  print(thislist[i])'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# https://www.programiz.com/python-programming/list\n",
     "#https://developers.google.com/edu/python/lists#:~:text=insert(index%2C%20elem)%20%2D%2D,similar%20to%20using%20extend().\n",
@@ -66,7 +103,13 @@
     "while i != 3:    \n",
     "    a.append(input(\"Enter a number: \")) \n",
     "    i += 1\n",
-    "print(a)   "
+    "print(a)   \n",
+    "\n",
+    "\n",
+    "\"\"\"thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "print(range(4))\n",
+    "for i in range(1,len(thislist)):\n",
+    "  print(thislist[i])\"\"\""
    ]
   },
   {
@@ -113,6 +156,51 @@
     "    i += 1\n",
     "    \n",
     "print(items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "<class 'set'>\n",
+      "set()\n",
+      "<class 'set'>\n",
+      "value: 1\n",
+      "value: 2\n",
+      "value: 3\n",
+      "value: 4\n",
+      "value: 4\n",
+      "['1', '2', '3', '4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "items= set()\n",
+    "print(items)\n",
+    "print(type(items))\n",
+    "\n",
+    "print(items)\n",
+    "print(type(items))\n",
+    "\n",
+    "i = 0\n",
+    "while i<=4:\n",
+    "    items.add(input(\"value: \")) \n",
+    "    i += 1\n",
+    "    \n",
+    "print(sorted(items))"
    ]
   },
   {
