--- a/Python_Help_code.ipynb
+++ b/Python_Help_code.ipynb
@@ -200,7 +200,7 @@
     "    items.add(input(\"value: \")) \n",
     "    i += 1\n",
     "    \n",
-    "print(sorted(items))"
+    "print(sorted(items))          #sorting in set, set sort"
    ]
   },
   {
